# macos_screenshot

./: README.md  pyproject.toml  setup.py
src/: __init__.py  app_list.py  capture_all_apps.py  main.py  models.py  save_image.py  screenshot.py  window_info.py
src/agents/: calc.py
src/stubs/: AppKit.py  AppKit.pyi  Cocoa.py  Quartz.py  Quartz.pyi  __init__.py
src/utils/: app_list.py
src/window_capture/: __init__.py  __main__.py  capture.py  cli.py  save_image.py  schema.py  window_info.py
src/window_structure/: __init__.py  __main__.py  cli.py  schema.py  window_info.py
