[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macos-screenshot"
version = "0.1.0"
description = "macOS application screenshot utility"
requires-python = ">=3.11"
dependencies = [
    "pyobjc-core",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "Pillow",
    "numpy",
    "setuptools>=75.8.0",
    "ruff>=0.9.1",
    "mlx-use>=0.0.3",
    "pyobjc-framework-applicationservices>=10.3.2",
]

[tool.hatch.build.targets.wheel]
packages = ["macos_screenshot"]
include = ["stubs/**/*.pyi", "py.typed"]
